tests/neg-custom-args/captures/reaches.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:21:11 --------------------------------------
21 |    cur = (() => f.write()) :: Nil // error since {f*} !<: {xs*}
   |           ^^^^^^^^^^^^^^^^^^^^^^^
   |           Found:    List[box () ->{f} Unit]
   |           Required: List[box () ->{xs*} Unit]
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:32:7 ---------------------------------------
32 |      (() => f.write()) :: Nil // error since {f*} !<: {xs*}
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |       Found:    List[box () ->{f} Unit]
   |       Required: box List[box () ->{xs*} Unit]^?
   |
   |       Note that reference (f : File^), defined in method $anonfun
   |       cannot be included in outer capture set {xs*} of value cur which is associated with method runAll1
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/reaches.scala:35:6 ------------------------------------------------------------
35 |  var cur: List[Proc] = xs // error: Illegal type for var
   |      ^
   |      Mutable variable cur cannot have type List[box () => Unit] since
   |      the part box () => Unit of that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/reaches.scala:42:15 -----------------------------------------------------------
42 |  val cur = Ref[List[Proc]](xs) // error: illegal type for type argument to Ref
   |            ^^^^^^^^^^^^^^^
   |            Sealed type variable T cannot be instantiated to List[box () => Unit] since
   |            the part box () => Unit of that type captures the root capability `cap`.
   |            This is often caused by a local capability in an argument of constructor Ref
   |            leaking as part of its result.
-- Error: tests/neg-custom-args/captures/reaches.scala:52:31 -----------------------------------------------------------
52 |  val id: Id[Proc, Proc] = new Id[Proc, () -> Unit] // error
   |                               ^^^^^^^^^^^^^^^^^^^^
   |                               Sealed type variable A cannot be instantiated to box () => Unit since
   |                               that type captures the root capability `cap`.
   |                               This is often caused by a local capability in an argument of constructor Id
   |                               leaking as part of its result.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:60:27 --------------------------------------
60 |    val f1: File^{id*} = id(f) // error
   |                         ^^^^^
   |                         Found:    File^{id, f}
   |                         Required: File^{id*}
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/reaches.scala:77:5 ------------------------------------------------------------
77 |  ps.map((x, y) => compose1(x, y)) // error: cannot mix cap and *
   |  ^^^^^^
   |  Reach capability cap and universal capability cap cannot both
   |  appear in the type [B](f: ((box A ->{ps*} A, box A ->{ps*} A)) => B): List[B] of this expression
